cmake_minimum_required(VERSION 3.15)
project(Temat6)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        Temat6
        Calculator.cpp
        Calculator.h
        Figure.cpp
        Figure.h
        Triangle.cpp
        Triangle.h
        Circle.cpp
        Circle.h
        Square.cpp
        Square.h
        main.cpp)